--- a/report.html
+++ b/report.html
@@ -3,26 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <title>Report</title>
+	<style>
+	h1 {text-align: center;}
+	</style>
 </head>
 <body>
     <h1> Report </h1>
-    <p>Criou-se o ficheiro '<b>index.html</b>' com o código fonte HTML.</p>
-    <p>Adicionou-se a imagem '<b>wordcloud.png</b>' na pasta <i>img</i>.</p>
-	<p>Criou-se o repositório <a href="https://github.com/TiagoDM-21905643/pw-lab1"><i>pw-lab1</i></a>, colocando neste todos os ficheiros anteriormente criados.</p>
-    <p>Criaram-se os ficheiros '<b>index.php</b>' e '<b>composer.json</b>' para o heroku conseguir ler o ficheiro html e corrê-lo.</p>
-    <p>Adicionaram-se os novos ficheiros criados ao repositório.</p>
-    <p>Criou-se uma conta no Heroku e uma app apartir do repositório dentro deste.</p>
-	<!-- Imagem site -->
+	
+    <h2> 1. Alojamento de página Web na cloud </h2>
+	
+    <h3> Criação de uma página Web </h3>
+	<p>Criou-se o ficheiro '<u>index.html</u>' com o código fonte HTML.</p>
+	<p>Adicionou-se a imagem '<u>wordcloud.png</u>' na pasta <i>img</i>.</p>
+	
+    <h3> Criação de repositório GitHub </h3>
+	<p>Criou-se o repositório <a href="https://github.com/TiagoDM-21905643/pw-lab1/"><b>pw-lab1</b></a>, colocando neste todos os ficheiros anteriormente criados.</p>
+    
+	<h3> Alojamento no Heroku </h3>
+	<p>Criaram-se os ficheiros '<u>index.php</u>' e '<u>composer.json</u>' para o heroku conseguir ler o ficheiro html e corrê-lo.</p>
+	<p>Adicionaram-se os novos ficheiros criados ao repositório.</p>
 	<p>Criou-se uma conta no Heroku e uma app apartir do repositório dentro deste.</p>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Python</li>
-        <li>Django</li>
-        <li>JavaScript</li>
-    </ul>
-    <p>De forma a consolidar todos os conhecimentos, farão semanalmente um laboratório, na aula prática (de entrega obrigatória) de aplicação da matéria lecionada, e irão implementar um projeto completo.</p>
-
-    <img src="img/wordcloud.png">
+	
+    <h2> 2. Conhecer a Internet </h2>
+	
+	<p>O endereço IP do meu computador é <b>85.139.226.223</b>.</p>
+	<p>O endereço IP do meu computador está localizado em Odivelas, Lisboa, Portugal, Europa.</p>
+	<img src="img/tracert-computer.png">
+	
+	<p>O endereço IP do servidor Heroku onde está a app é <b>185.1.131.34</b>.</p>
+	<p>O endereço IP do servidor Heroku onde está a app está localizado na Alemanha, Europa.</p>
+	<img src="img/tracert-heroku.png">
+	
+	<p>GeoTraceroute de <a href="https://lab1-a21905643.herokuapp.com/"><b>lab1-a21905643.herokuapp.com</b></a></p>
+	<p>Percurso:</p>
+	<ul>
+		<li>PT - Prior Velho (0 km)</li>
+		<li>PT - Lisbon (8 km)</li>
+		<li>DE - Frankfurt (1879 km)</li>
+	</ul>
+	<img src="img/geotracert.png">
+	
+    <h2> 3. Acesso via HTTP à minha página Web </h2>
+	
+	<p>Acedeu-se ao código-fonte da página:</p>
+	<img src="img/view-source.png">
+	
+	<p>Inspecionou-se a network da página:</p>
+	<img src="img/inspect.png">
+	
+	<p>Na sequência de um clique num hiperlink foram descarregados 34 ficheiros.</p>
+	<p>Ficheiros:</p>
+	<table border="1">
+		<tr>
+			<td>Nome</td>
+			<td>Tipo</td>
+			<td>Tamanho</td>
+			<td>Timing de espera</td>
+		</tr>
+		<tr>
+			<td>lab1-a21905643.herokuapp.com</td>
+			<td>document</td>
+			<td>903 B</td>
+			<td>1 ms</td>
+		</tr>
+		<tr>
+			<td>wordcloud.png</td>
+			<td>png</td>
+			<td>47 kB</td>
+			<td>3 ms</td>
+		</tr>
+	</table>
+	
+	<p>Selecionando cada um dos ficheiros, observa-se:</p>
+	<ul>
+		<li>Preview: Mostra o elemento selecionado no site</li>
+		<li>Headers: Informação sobre o pedido</li>
+		<li>Timing: Informação sobre o tempo que cada estágio demora a carregar</li>
+	</ul>
 </body>
 </html>
