Edited lab1/index.html and added the lab2 initial commit

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>PW Labs</title>
+    <title>PW Lab1</title>
 </head>
 <body>
     <h1> Laboratórios Programação Web </h1>
