Edited the file

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -8,13 +8,19 @@
         <meta name="description" content="Website sobre Lisboa">
         <link rel="shortcut icon" type="image/x-icon" href="images/icon.png"/>
         <body style="background-color:greenyellow"></body>
+        <style>
+            h1 {text-align: center;}
+            img {text-align: center;}
+        </style>
     </head>
     <body>
-        <h1> Laboratórios Programação Web </h1>
-        <ul>
-		    <li><a href="pw.html">Introdução à programação Web</a></li>
-		    <li><a href="report.html">Conhecer a Internet</a></li>
-	    </ul>
-        
+        <h1> Osaka </h1>
+        <center><img src="images/osaka.png"></center>
+        <br>
+        <center><p><a href="index.html"><b>Introdução</b></a> | 
+            <a href="local.html"><b>Localização</b></a> | 
+            <a href="multimedia.html"><b>Multimédia</b></a> | 
+            <a href="info.html"><b>Informações</b></a> | 
+            <a href="../index.html"><b>Home</b></a></p></center>
     </body>
 </html>
