--- a/lab2/index.html
+++ b/lab2/index.html
@@ -18,9 +18,39 @@
         <center><img src="images/osaka.png"></center>
         <br>
         <center><p><a href="index.html"><b>Introdução</b></a> | 
-            <a href="local.html"><b>Localização</b></a> | 
-            <a href="multimedia.html"><b>Multimédia</b></a> | 
-            <a href="info.html"><b>Informações</b></a> | 
-            <a href="../index.html"><b>Home</b></a></p></center>
+            <a href="local.html">Localização</a> | 
+            <a href="multimedia.html">Multimédia</a> | 
+            <a href="info.html">Informações</a> | 
+            <a href="../index.html">Home</a></p></center>
+        <hr>
+        <h3> Introdução </h3>
+        <p>Com uma população estimada em 2.649.601 habitantes (2010) é a 
+            terceira cidade mais populosa do Japão, atrás somente de 
+            Yokohama e da capital, Tóquio. Localiza-se em região de Kansai, 
+            no sul da ilha de Honshu. Forma com as cidades periféricas de 
+            Kobe e Kyoto (e respectivas regiões metropolitanas) uma 
+            aglomeração urbana de 17,4 milhões de habitantes. Originalmente 
+            fundada durante a Era Edo, está entre as cidades mais antigas 
+            do país, havendo vestígios de palácios imperiais desde o século 
+            IV, incluindo o mundialmente famoso Ōsaka-jō (ou "Castelo de 
+            Osaka", em tradução para o português), erguido no século XVI e 
+            um dos mais importantes símbolos da cidade.</p>
+        <center><p>⁣⁣☁ ☁ ☁ ☁ ☁ ☁ ☁ ☁ ☁ ☁ ☁</p></center>
+        <center><p>         💻</p></center>
+        <center><p>          💻💻⁣</p></center>
+        <center><p>       🏄💻💻💻</p></center>
+        <center><p>     💻💻💻💻💻💻</p></center>
+        <center><p>💻💻💻💻💻💻💻💻💻</p></center>
+        <center><p><b>Surfing</b> <u>the</u> <i>web</i>.</p></center>
+        <hr>
+        <p>Era uma vez, um gato maltês tocava piano e falava francês. 👍</p>
+        <ul>
+            <li>Na <a href="index.html"><b>Introdução</b></a> está a descrição de Osaka.</li>
+            <li>Na <a href="local.html"><b>Localização</b></a> está a descrição de Osaka.</li>
+            <li>Na <a href="multimedia.html"><b>Multimédia</b></a> está a descrição de Osaka.</li>
+            <li>Na tab de <a href="info.html"><b>Informações</b></a> está a descrição de Osaka.</li>
+            <li>Na <a href="../index.html"><b>Home</b></a> é onde pode aceder a todos os labs.</li>
+        </ul>
+        <center><img src="images/wordcloud.png"></center>
     </body>
 </html>
