--- a/lab2/multimedia.html
+++ b/lab2/multimedia.html
@@ -14,9 +14,39 @@
         </style>
     </head>
     <body>
-        <h1> merda3 </h1>
+        <h1> Osaka </h1>
         <center><img src="images/osaka.png"></center>
         <br>
-        <center><p><a href="index.html">Introdução</a> | <a href="local.html">Localização</a> | <a href="multimedia.html">Multimédia</a> | <a href="info.html">Informações</a> | <a href="../index.html">Home</a></p></center>
+        <center><p><a href="index.html">Introdução</a> | 
+            <a href="local.html">Localização</a> | 
+            <a href="multimedia.html"><b>Multimédia</b></a> | 
+            <a href="info.html">Informações</a> | 
+            <a href="../index.html">Home</a></p></center>
+        <hr>
+        <h3> Multimédia </h3>
+        <center><picture> <a href="images/osaka_grande.jpg" target="_blank"> <img src="images/osaka_pequena.jpg" alt="osaka"></a></picture>
+        <picture> <a href="images/osaka2_grande.jpg" target="_blank"> <img src="images/osaka2_pequena.jpg" alt="osaka"></a></picture></center>
+        <hr>
+        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/sgKPzHJkhQk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+        <hr>
+        <center>
+        <p style="font-size:40px">Pimba à japonesa</p>
+        <p style="font-size:25px">Zé do Pipão</p>
+        <br>
+        <p><i>Dançámos toda a noite</i></p>
+        <p><i>Comendo e dançando outra vez</i></p>
+        <p><i>Depois fomos pró meu quarto</i></p>
+        <p><i>E eu apliquei meu japonês</i></p>
+        <br>
+        <p><i>Xinuku takaro toko duro na raxa</i></p>
+        <p><i>Ni xinto pau xovi tuku ya xaxa</i></p>
+        <p><i>Xinuku takaro toko duro na raxa</i></p>
+        <p><i>Ni xinto pau xovi tuku ya xaxa</i></p>
+        <br>
+        <p><i>Xinuku takaro toko duro na raxa</i></p>
+        <p><i>Ni xinto pau xovi tuku ya xaxa</i></p>
+        <p><i>Xinuku takaro toko duro na raxa</i></p>
+        <p><i>Ni xinto pau xovi tuku ya xaxa</i></p>
+        </center>
     </body>
 </html>
