--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>PW Labs</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/home.png"/>
 </head>
 <body>
     <h1> Laboratórios Programação Web </h1>
