--- a/lab2/info.html
+++ b/lab2/info.html
@@ -14,9 +14,48 @@
         </style>
     </head>
     <body>
-        <h1> merda </h1>
+        <h1> Osaka </h1>
         <center><img src="images/osaka.png"></center>
         <br>
-        <center><p><a href="index.html">Introdução</a> | <a href="local.html">Localização</a> | <a href="multimedia.html">Multimédia</a> | <a href="info.html">Informações</a> | <a href="../index.html">Home</a></p></center>
+        <center><p><a href="index.html">Introdução</a> | 
+            <a href="local.html">Localização</a> | 
+            <a href="multimedia.html">Multimédia</a> | 
+            <a href="info.html"><b>Informações</b></a> | 
+            <a href="../index.html">Home</a></p></center>
+        <h3> Informações </h3>
+        <center>
+        <table border="1" cellpadding="10%" cellspacing="5px" bgcolor="blue">
+            <colgroup>
+              <col style="background-color:green">
+              <col span="2" style="background-color:yellow">
+            </colgroup>
+            <tr>
+                <td rowspan="2"><b>Demografia</b> </td>
+                <td>População</td>
+                <td>2,691,000,000 hab</td>
+            </tr>
+            <tr>
+                <td>Densidade polucional</td>
+                <td>12,067,264 hab/km²</td>
+            </tr>
+            <tr>
+                <td rowspan="3"> <b>Geografia</b> </td>
+                <td>Área</td>
+                <td>223km²</td>
+            </tr>
+            <tr>
+                <td>Região</td>
+                <td>Osaka</td>
+            </tr>
+            <tr>
+                <td>Pais</td>
+                <td>Japão</td>
+            </tr>
+            <tr>
+                <td><b>Website</b></td>
+                <td colspan="2"> <a href="https://osaka-info.jp/en/"> osaka-info.jp </a></td>
+            </tr>
+        </table>
+        </center>
     </body>
 </html>
