Added the images and Edited lab2 index-html

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -46,9 +46,9 @@
         <p>Era uma vez, um gato maltês tocava piano e falava francês. 👍</p>
         <ul>
             <li>Na <a href="index.html"><b>Introdução</b></a> está a descrição de Osaka.</li>
-            <li>Na <a href="local.html"><b>Localização</b></a> está a descrição de Osaka.</li>
-            <li>Na <a href="multimedia.html"><b>Multimédia</b></a> está a descrição de Osaka.</li>
-            <li>Na tab de <a href="info.html"><b>Informações</b></a> está a descrição de Osaka.</li>
+            <li>Na <a href="local.html"><b>Localização</b></a> está a descrição da localização do Japão e o mapa de Osaka.</li>
+            <li>Na <a href="multimedia.html"><b>Multimédia</b></a> estão algumas imagens de Ozaka, um vídeo e um poema.</li>
+            <li>Na tab de <a href="info.html"><b>Informações</b></a> está algumas Informações sobre a Demografia, a Geografia e o Website de Osaka.</li>
             <li>Na <a href="../index.html"><b>Home</b></a> é onde pode aceder a todos os labs.</li>
         </ul>
         <center><img src="images/wordcloud.png"></center>
