corrigimos o autor e outros metadados

--- a/lab2/info.html
+++ b/lab2/info.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>PW Lab2</title>
-        <meta name="author" content="Ana Maria">
-        <meta name="keywords" content="palavras chave">
-        <meta name="description" content="Website sobre Lisboa">
+        <meta name="author" content="Tiago Matos">
+        <meta name="keywords" content="Informações">
+        <meta name="description" content="Website sobre Osaka">
         <link rel="shortcut icon" type="image/x-icon" href="images/icon.png"/>
         <body style="background-color:greenyellow"></body>
         <style>
