--- a/lab2/multimedia.html
+++ b/lab2/multimedia.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>PW Lab2</title>
-        <meta name="author" content="Ana Maria">
-        <meta name="keywords" content="palavras chave">
-        <meta name="description" content="Website sobre Lisboa">
+        <meta name="author" content="Tiago Matos">
+        <meta name="keywords" content="Localização">
+        <meta name="description" content="Website sobre Osaka">
         <link rel="shortcut icon" type="image/x-icon" href="images/icon.png"/>
         <body style="background-color:greenyellow"></body>
         <style>
@@ -23,7 +23,7 @@
             <a href="info.html">Informações</a> | 
             <a href="../index.html">Home</a></p></center>
         <hr>
-        <h3> Multimédia </h3>
+        <h3> Localização </h3>
         <center><picture> <a href="images/osaka_grande.jpg" target="_blank"> <img src="images/osaka_pequena.jpg" alt="osaka"></a></picture>
         <picture> <a href="images/osaka2_grande.jpg" target="_blank"> <img src="images/osaka2_pequena.jpg" alt="osaka"></a></picture></center>
         <hr>
