--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1> Laboratórios Programação Web </h1>
     <p><a href="lab1/index.html">Laboratório 1: Conhecer a Internet com a minha primeira página Web</a></p>
     <p><a href="lab2/index.html">Laboratório 2: Explorando o HTML com o meu primeiro website</a></p>
+    <p><a href="lab3/index.html">Laboratório 3: Inclusão de formulários e imagens SVG no meu website</a></p>
 </body>
 </html>
