--- a/lab3/quizz.html
+++ b/lab3/quizz.html
@@ -26,7 +26,7 @@
             <a href="comentarios.html">Comentários</a></p></center>
 
         <h3> Quizz </h3>
-        <form action="tiago.dias.matos@gmail.com" method="post">
+        <form action="mailto:tiago.dias.matos@gmail.com" method="post">
             <fieldset>
                 <label>Nome: <input type="text" name="nome" placeholder="Insira o seu nome" autocomplete="given-name" size=25 required autofocus></label>
                 <br>
