lab3 new pics and corrections (falta o ponto 4)

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -21,9 +21,9 @@
             <a href="local.html">Localização</a> | 
             <a href="multimedia.html">Multimédia</a> | 
             <a href="info.html">Informações</a> | 
-            <a href="../index.html">Home</a> | 
             <a href="quizz.html">Quizz</a> | 
-            <a href="comentarios.html">Comentários</a></p></center>
+            <a href="comentarios.html">Comentários</a> | 
+            <a href="../index.html">Home</a></p></center>
         <hr>
         <h3> Introdução </h3>
         <p>Com uma população estimada em 2.649.601 habitantes (2010) é a 
