--- a/lab3/info.html
+++ b/lab3/info.html
@@ -21,9 +21,9 @@
             <a href="local.html">Localização</a> | 
             <a href="multimedia.html">Multimédia</a> | 
             <a href="info.html"><b>Informações</b></a> | 
-            <a href="../index.html">Home</a> | 
             <a href="quizz.html">Quizz</a> | 
-            <a href="comentarios.html">Comentários</a></p></center>
+            <a href="comentarios.html">Comentários</a> | 
+            <a href="../index.html">Home</a></p></center>
         <h3> Informações </h3>
         <center>
         <table border="1" cellpadding="10%" cellspacing="5px" bgcolor="blue">
