--- a/lab3/local.html
+++ b/lab3/local.html
@@ -21,9 +21,9 @@
             <a href="local.html"><b>Localização</b></a> | 
             <a href="multimedia.html">Multimédia</a> | 
             <a href="info.html">Informações</a> | 
-            <a href="../index.html">Home</a> | 
             <a href="quizz.html">Quizz</a> | 
-            <a href="comentarios.html">Comentários</a></p></center>
+            <a href="comentarios.html">Comentários</a> | 
+            <a href="../index.html">Home</a></p></center>
         <hr>
         <h3> Localização </h3>
         <p>O Japão, país insular no Oceano Pacífico, tem cidades densas, 
@@ -35,5 +35,11 @@
             Tóquio, a capital, é conhecida por seus arranha-céus e lojas e pela 
             cultura pop.</p>
         <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d249622.8045261505!2d135.4355061263412!3d34.7103338566079!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6553406e2e1%3A0xc55bc16ee46a2fe7!2zT3Nha2EsIEphcMOjbw!5e0!3m2!1spt-PT!2spt!4v1614086091209!5m2!1spt-PT!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe></center>
+        <center>
+            <svg width="600" height="450">
+                <image href="images/osaka.svg" width="600" height="450"></image>
+            </svg>
+            <iframe src="images/osaka_grande.jpg" name="osaka_pics" width="800px" height="400px" title="Imagens Osaka"></iframe>
+        </center>
     </body>
 </html>
