--- a/lab3/quizz.html
+++ b/lab3/quizz.html
@@ -21,9 +21,9 @@
             <a href="local.html">Localização</a> | 
             <a href="multimedia.html">Multimédia</a> | 
             <a href="info.html">Informações</a> | 
-            <a href="../index.html">Home</a> | 
             <a href="quizz.html"><b>Quizz</b></a> | 
-            <a href="comentarios.html">Comentários</a></p></center>
+            <a href="comentarios.html">Comentários</a> | 
+            <a href="../index.html">Home</a></p></center>
 
         <h3> Quizz </h3>
         <form action="mailto:tiago.dias.matos@gmail.com" method="post">
