lab4 quase feito

--- a/lab4/info.html
+++ b/lab4/info.html
@@ -8,13 +8,19 @@
         <meta name="description" content="Informações de Osaka">
         <link rel="stylesheet" type="text/css" href="estilos.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/icon.png"/>
-        <body style="background-color:rgba(60, 120, 180, 0.8)"></body>
     </head>
 
     <body>
         <header>
-            <h1> Osaka </h1>
-            <img src="images/osaka.png">
+            <br><h1> Osaka </h1>
+            <figure>
+                <img src="images/osaka.png">
+                <figcaption>Rio em Osaka</figcaption>
+                <details>
+                    <summary>Local</summary>
+                    <p>Dontonbori in Osaka, Japan</p>
+                </details>
+            </figure>
         </header><br>
 
         <nav id='menu'>
@@ -37,8 +43,8 @@
             <center>
                 <table border="1" cellpadding="10%" cellspacing="5px" bgcolor="blue">
                     <colgroup>
-                        <col style="background-color:green">
-                        <col span="2" style="background-color:yellow">
+                        <col style="background-color:rgba(55, 0, 128, 0.5)">
+                        <col span="2" style="background-color:rgba(247, 0, 255, 0.2)">
                     </colgroup>
                     <tr>
                         <td rowspan="2"><b>Demografia</b> </td>
@@ -70,7 +76,7 @@
             </center><hr>
             
             <footer>
-                <p>Tiago Dias Matos | a21905643 | ULHT | 2021</p>
+                <p>Tiago Dias Matos | a21905643 | ULHT | 2021</p><br>
             </footer>
         </main>
     </body>
