--- a/lab4/multimedia.html
+++ b/lab4/multimedia.html
@@ -8,13 +8,19 @@
         <meta name="description" content="Multimédia de Osaka">
         <link rel="stylesheet" type="text/css" href="estilos.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/icon.png"/>
-        <body style="background-color:rgba(60, 120, 180, 0.8)"></body>
     </head>
 
     <body>
         <header>
-            <h1> Osaka </h1>
-            <img src="images/osaka.png">
+            <br><h1> Osaka </h1>
+            <figure>
+                <img src="images/osaka.png">
+                <figcaption>Rio em Osaka</figcaption>
+                <details>
+                    <summary>Local</summary>
+                    <p>Dontonbori in Osaka, Japan</p>
+                </details>
+            </figure>
         </header><br>
 
         <nav id='menu'>
@@ -61,7 +67,7 @@
             </section><hr>
             
             <footer>
-                <p>Tiago Dias Matos | a21905643 | ULHT | 2021</p>
+                <p>Tiago Dias Matos | a21905643 | ULHT | 2021</p><br>
             </footer>
         </main>
     </body>
