--- a/lab4/html5-css.html
+++ b/lab4/html5-css.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Tiago Matos">
         <meta name="keywords" content="HTML5-CSS">
         <meta name="description" content="HTML5-CSS">
-        <link rel="stylesheet" type="text/css" href="estilos.css">
+        <link rel="stylesheet" type="text/css" href="css/estilos.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/icon.png"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <style>
