--- a/lab4/info.html
+++ b/lab4/info.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Tiago Matos">
         <meta name="keywords" content="Informações">
         <meta name="description" content="Informações de Osaka">
-        <link rel="stylesheet" type="text/css" href="estilos.css">
+        <link rel="stylesheet" type="text/css" href="css/estilos.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/icon.png"/>
     </head>
 
