--- a/lab4/info.html
+++ b/lab4/info.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Informações de Osaka">
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/icon.png"/>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
 
     <body>
@@ -26,14 +27,14 @@
         <nav id='menu'>
             <input type='checkbox' id='responsive-menu'><label></label>
             <ul>
-                <li><a href='index.html'>Introdução</a></li>
-                <li><a href='local.html'>Localização</a></li>
-                <li><a href='multimedia.html'>Multimédia</a></li>
-                <li><a href='info.html'><b>Informações</b></a></li>
-                <li><a href='quizz.html'>Quizz</a></li>
-                <li><a href='comentarios.html'>Comentários</a></li>
-                <li><a href='html5-css.html'>HTML5-CSS</a></li>
-                <li><a href='../index.html'>Home</a></li>
+                <li><a href='index.html'><span class="material-icons">article</span> Introdução</a></li>
+                <li><a href='local.html'><span class="material-icons">push_pin</span> Localização</a></li>
+                <li><a href='multimedia.html'><span class="material-icons">collections</span> Multimédia</a></li>
+                <li><a href='info.html'><span class="material-icons">info</span> <b>Informações</b></a></li>
+                <li><a href='quizz.html'><span class="material-icons">quiz</span> Quizz</a></li>
+                <li><a href='comentarios.html'><span class="material-icons">chat</span> Comentários</a></li>
+                <li><a href='html5-css.html'><span class="material-icons">code</span> HTML5-CSS</a></li>
+                <li><a href='../index.html'><span class="material-icons">home</span> Home</a></li>
             </ul>
         </nav>
 
