--- a/lab4/html5-css.html
+++ b/lab4/html5-css.html
@@ -33,14 +33,14 @@
         <nav id='menu'>
             <input type='checkbox' id='responsive-menu'><label></label>
             <ul>
-                <li><a href='index.html'>Introdução</a></li>
-                <li><a href='local.html'>Localização</a></li>
-                <li><a href='multimedia.html'>Multimédia</a></li>
-                <li><a href='info.html'>Informações</a></li>
-                <li><a href='quizz.html'>Quizz</a></li>
-                <li><a href='comentarios.html'>Comentários</a></li>
-                <li><a href='html5-css.html'><b>HTML5-CSS</b></a></li>
-                <li><a href='../index.html'>Home</a></li>
+                <li><a href='index.html'><span class="material-icons">article</span> Introdução</a></li>
+                <li><a href='local.html'><span class="material-icons">push_pin</span> Localização</a></li>
+                <li><a href='multimedia.html'><span class="material-icons">collections</span> Multimédia</a></li>
+                <li><a href='info.html'><span class="material-icons">info</span> Informações</a></li>
+                <li><a href='quizz.html'><span class="material-icons">quiz</span> Quizz</a></li>
+                <li><a href='comentarios.html'><span class="material-icons">chat</span> Comentários</a></li>
+                <li><a href='html5-css.html'><span class="material-icons">code</span> <b>HTML5-CSS</b></a></li>
+                <li><a href='../index.html'><span class="material-icons">home</span> Home</a></li>
             </ul>
         </nav>
 
