--- a/index.html
+++ b/index.html
@@ -21,30 +21,55 @@
             display: block;
             padding: 12px;
             text-decoration: none;
+            margin-bottom: 10px;
+            border: 2px solid white;
+            box-shadow: black 0 2px 5px 0;
         }
         
-        .vertical-menu a:hover {
-            background-color: rgb(50, 130, 180);
+        .vertical-menu a:hover { background-color: rgb(50, 130, 180); }
+
+        #cf { position:relative; }
+
+        #cf img {
+            position:absolute;
+            -webkit-transition: opacity 1s ease-in-out;
+            -moz-transition: opacity 1s ease-in-out;
+            -o-transition: opacity 1s ease-in-out;
+            transition: opacity 1s ease-in-out;
         }
+
+        #cf img.top:hover { opacity:0; }
     </style>
 </head>
 <body>
     <center>
-        <h1> Laboratórios Programação Web </h1>
+        <h1 style="color: white; text-shadow: black 0 5px 5px;"> Laboratórios Programação Web </h1>
         <div class="vertical-menu">
             <span title="Conhecer a Internet com a minha primeira página Web">
                 <a href="lab1/index.html" >Laboratório 1</a>
             </span>
+
             <span title="Explorando o HTML com o meu primeiro website">
                 <a href="lab2/index.html" >Laboratório 2</a>
             </span>
+
             <span title="Inclusão de formulários e imagens SVG no meu website">
                 <a href="lab3/index.html" >Laboratório 3</a>
             </span>
+
             <span title="Integração de elementos semânticos HTML5 no meu website e estilização com seletores e propriedades CSS">
                 <a href="lab4/index.html" >Laboratório 4</a>
             </span>
+
+            <span title="Website responsivo e dinâmico">
+                <a href="lab5/index.html" >Laboratório 5</a>
+            </span>
         </div>
     </center>
+    <br><br>
+    <div id="cf">
+        <img class="bottom" src="images/home2.jpg">
+        <img class="top" src="images/home1.jpg">
+    </div>
 </body>
 </html>
