--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             <span title="Website responsivo e dinâmico">
                 <a href="lab5/index.html" >Laboratório 5</a>
             </span>
+
+            <span title="Primeira web app django">
+                <a href="https://pw-lab6.herokuapp.com/" >Laboratório 6</a>
+            </span>
         </div>
     </center>
     <br><br>
